--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>ca.footeware</groupId>
-    <artifactId>swing.texteditor</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <artifactId>textify</artifactId>
+    <version>1.2.0-SNAPSHOT</version>
+    <name>textify</name>
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
-        <exec.mainClass>ca.footeware.swing.texteditor.TextEditor</exec.mainClass>
+        <exec.mainClass>ca.footeware.swing.textify.Textify</exec.mainClass>
     </properties>
     <dependencies>
         <dependency>
@@ -28,7 +29,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>ca.footeware.swing.texteditor.TextEditor</mainClass>
+                            <mainClass>ca.footeware.swing.textify.Textify</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
