--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ca.footeware</groupId>
     <artifactId>textify</artifactId>
-    <version>1.3.0-SNAPSHOT</version>
-    <name>textify</name>
+    <version>1.4.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -18,10 +17,21 @@
             <artifactId>flatlaf</artifactId>
             <version>3.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.10.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
-        <finalName>textify-${project.version}</finalName>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
+            </plugin>
+            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
