--- a/src/main/resources/external/textify.desktop
+++ b/src/main/resources/external/textify.desktop
@@ -1,11 +1,11 @@
 [Desktop Entry]
 Version=1.0
 Name=textify
-Comment=A minimal text editor.
+Comment=A minimal text editor for Gnome.
 Exec=/usr/local/bin/textify %f
 Icon=/usr/share/icons/hicolor/scalable/apps/textify.svg
 Terminal=false
 Type=Application
 Categories=Utility;Development;System;Office
-StartupWMClass=textify
+StartupWMClass=ca-footeware-swing-textify-Textify
 MimeType=text/plain
